Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjObject.quorum
class Main
    action Main
        Boolean b
        Object o
        b:SetValue(true)
        o = cast(Object, b)
        Boolean bool = cast(Boolean, o)
        if bool:GetValue() = true
            output "passed"
        end
    end
end
