Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextBoolObjField.quorum
class main
    Boolean b
    text txt
    action Main
        b:SetValue(true)
        txt = cast(text, b)
    end
end